Fix u-net errors

--- a/sandstone-segmentation/multi_unet.ipynb
+++ b/sandstone-segmentation/multi_unet.ipynb
@@ -3,109 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8562bf5",
+   "id": "a1447ac8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install tensorflow --user\n",
-    "!{sys.executable} -m pip install imageio --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "463c6090",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!{sys.executable} -m pip install keras --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea80aefa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!{sys.executable} -m pip install keras.utils --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e2c49ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!{sys.executable} -m pip install --upgrade pip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e89476fc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!{sys.executable} -m pip install opencv-python --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "271314c9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting sklearn\n",
-      "  Using cached sklearn-0.0-py2.py3-none-any.whl\n",
-      "Collecting scikit-learn\n",
-      "  Using cached scikit_learn-0.24.2-cp39-cp39-win_amd64.whl (6.9 MB)\n",
-      "Collecting joblib>=0.11\n",
-      "  Using cached joblib-1.0.1-py3-none-any.whl (303 kB)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\alif-\\appdata\\roaming\\python\\python39\\site-packages (from scikit-learn->sklearn) (1.21.2)\n",
-      "Collecting threadpoolctl>=2.0.0\n",
-      "  Using cached threadpoolctl-2.2.0-py3-none-any.whl (12 kB)\n",
-      "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\alif-\\appdata\\roaming\\python\\python39\\site-packages (from scikit-learn->sklearn) (1.6.3)\n",
-      "Installing collected packages: threadpoolctl, joblib, scikit-learn, sklearn\n",
-      "Successfully installed joblib-1.0.1 scikit-learn-0.24.2 sklearn-0.0 threadpoolctl-2.2.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\alif-\\anaconda3\\envs\\tf2.5\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\alif-\\anaconda3\\envs\\tf2.5\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\alif-\\anaconda3\\envs\\tf2.5\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\alif-\\anaconda3\\envs\\tf2.5\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -illow (c:\\users\\alif-\\anaconda3\\envs\\tf2.5\\lib\\site-packages)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!{sys.executable} -m pip install sklearn --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4562d6e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "!{sys.executable} -m pip install imageio --user\n",
+    "!{sys.executable} -m pip install keras --user\n",
+    "!{sys.executable} -m pip install keras.utils --user\n",
+    "!{sys.executable} -m pip install --upgrade pip\n",
+    "!{sys.executable} -m pip install opencv-python --user\n",
+    "# Code works after installing sklearn in anaconda terminal\n",
+    "# conda install conda-forge sklearn\n",
+    "!{sys.executable} -m pip install sklearn --user\n",
     "!{sys.executable} -m pip install matplotlib --force-reinstall --user"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39672961",
+   "id": "621f6ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,8 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e86e1f3d",
+   "execution_count": 2,
+   "id": "97d23e30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,8 +46,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3e4c6de7",
+   "execution_count": 3,
+   "id": "f86d2d87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a3ac5347",
+   "execution_count": 35,
+   "id": "48450502",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +87,7 @@
     "    c4 = Conv2D(128, (3, 3), activation=\"relu\", kernel_initializer=\"he_normal\", padding=\"same\")(c4)\n",
     "    p4 = MaxPooling2D((2, 2))(c4)\n",
     "    \n",
-    "    c5 = Conv2D(256, (3, 3), activation=\"relu\", kernel_initializer=\"he_normal\", padding=\"same\")(p3)\n",
+    "    c5 = Conv2D(256, (3, 3), activation=\"relu\", kernel_initializer=\"he_normal\", padding=\"same\")(p4)\n",
     "    c5 = Dropout(0.3)(c5)\n",
     "    c5 = Conv2D(256, (3, 3), activation=\"relu\", kernel_initializer=\"he_normal\", padding=\"same\")(c5)\n",
     "    p5 = MaxPooling2D((2, 2))(c5)\n",
@@ -202,15 +120,15 @@
     "    \n",
     "    # Info: why perform a convolution on the output layer?\n",
     "    outputs = Conv2D(n_classes, (1,1), activation=\"softmax\")(c9)\n",
-    "    model = Model(inputs=[inputs], outputs=[ouputs])\n",
+    "    model = Model(inputs=[inputs], outputs=[outputs])\n",
     "    \n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "bccf28c9",
+   "execution_count": 5,
+   "id": "de3aad2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fa23dfd3",
+   "execution_count": 6,
+   "id": "63b743ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,8 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f4a59657",
+   "execution_count": 7,
+   "id": "1d17ebfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "672c8e2c",
+   "execution_count": 8,
+   "id": "4f332c59",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +179,7 @@
        "1600"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,8 +191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e3305825",
+   "execution_count": 9,
+   "id": "7925bc68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f7598d9c",
+   "execution_count": 10,
+   "id": "a29d7ed2",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +216,7 @@
        "1600"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,10 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "9845092a",
+   "execution_count": 11,
+   "id": "ac494347",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alif-\\AppData\\Roaming\\Python\\Python39\\site-packages\\sklearn\\utils\\validation.py:63: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "labelencoder = LabelEncoder()\n",
@@ -325,8 +252,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "8d81c4e5",
+   "execution_count": 12,
+   "id": "9036a5e1",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +268,7 @@
        "       [3, 3, 3, ..., 3, 3, 3]], dtype=uint8)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "f50f3f11",
+   "execution_count": 13,
+   "id": "5fbcd6ed",
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +289,7 @@
        "array([1, 2, 3, 4], dtype=uint8)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,8 +300,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "5dd31c21",
+   "execution_count": 14,
+   "id": "0904bde8",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +316,7 @@
        "       [2, 2, 2, ..., 2, 2, 2]], dtype=int64)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,8 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "0409ea39",
+   "execution_count": 15,
+   "id": "7a5a70b1",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +337,7 @@
        "array([0, 1, 2, 3], dtype=int64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,8 +348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "96f5b81e",
+   "execution_count": 16,
+   "id": "028e2b66",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +358,7 @@
        "(1600, 128, 128)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,8 +369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "ea1ed911",
+   "execution_count": 17,
+   "id": "aa3d5a79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,8 +379,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "d96c5501",
+   "execution_count": 18,
+   "id": "bb0b0e23",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +389,7 @@
        "(1600, 128, 128, 1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,8 +400,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "cb2b75ce",
+   "execution_count": 19,
+   "id": "6537bf7d",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +410,7 @@
        "array([35], dtype=uint8)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,8 +421,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "a11eefe2",
+   "execution_count": 20,
+   "id": "8c86fd05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "56e4f568",
+   "execution_count": 21,
+   "id": "686a1e28",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +441,7 @@
        "array([0.02663112])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,8 +452,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "7291f099",
+   "execution_count": 22,
+   "id": "f4b41544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,8 +462,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "1ef2b31a",
+   "execution_count": 23,
+   "id": "76a25159",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +472,7 @@
        "(1600, 128, 128, 1)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,8 +483,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "23c4af7d",
+   "execution_count": 24,
+   "id": "356775b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,8 +494,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "dc7455c2",
+   "execution_count": 25,
+   "id": "e31de272",
    "metadata": {},
    "outputs": [
     {
@@ -585,8 +512,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "90bc1870",
+   "execution_count": 26,
+   "id": "e22675ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,8 +524,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "558e72c9",
+   "execution_count": 27,
+   "id": "3f506944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,8 +535,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "490007ba",
+   "execution_count": 28,
+   "id": "b25ccf95",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +593,7 @@
        "        [1]]], dtype=int64)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,8 +604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "25bbff2a",
+   "execution_count": 29,
+   "id": "e6937ca1",
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +662,7 @@
        "        [0., 1., 0., 0.]]], dtype=float32)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,8 +673,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "8261fce1",
+   "execution_count": 30,
+   "id": "c56f93f0",
    "metadata": {},
    "outputs": [
     {
@@ -776,8 +703,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "ceda5da2",
+   "execution_count": 31,
+   "id": "5b93c83b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,12 +715,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3083a304",
+   "execution_count": 36,
+   "id": "1be97a0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = multi_unet_model(n_classes, IMG_HEIGHT=256, IMG_WIDTH=256, IMG_CHANNELS=1)"
+    "model = multi_unet_model(n_classes=n_classes, IMG_HEIGHT=IMG_HEIGHT, IMG_WIDTH=IMG_WIDTH, IMG_CHANNELS=IMG_CHANNELS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47335d95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimz)"
    ]
   }
  ],
