--- a/traditional-segmentation/rand-forest.ipynb
+++ b/traditional-segmentation/rand-forest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "47f364ea",
+   "id": "02a233e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac65f0c3",
+   "id": "07f482c6",
    "metadata": {},
    "source": [
     "## Feature Engineering and Extraction"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fb7f570d",
+   "id": "c108baa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6adcf47c",
+   "id": "3cf5c3df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "542a7a6f",
+   "id": "55264050",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cab816b3",
+   "id": "c74e21f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "048a5ab5",
+   "id": "a5b6f660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "91c266c2",
+   "id": "d4200f96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "eb836e64",
+   "id": "0f0ab392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5917e5a9",
+   "id": "a6b6f785",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4215918",
+   "id": "6a8f66dd",
    "metadata": {},
    "source": [
     "## Data Split and Train"
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ad1006a0",
+   "id": "a3fdbaa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "33b9cc9c",
+   "id": "69da7c3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,8 +436,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "0c7945a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "model = RandomForestClassifier(n_estimators=10, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e90c09d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=10, random_state=42)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b412d0d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction_test = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "fe24d29a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy =  0.9997499767135174\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "print(\"Accuracy = \", metrics.accuracy_score(Y_test, prediction_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5e7d44b5",
+   "id": "a8de8720",
    "metadata": {},
    "outputs": [],
    "source": []
