--- a/traditional-segmentation/rand-forest.ipynb
+++ b/traditional-segmentation/rand-forest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "02a233e1",
+   "id": "7f3569e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f482c6",
+   "id": "d43bef51",
    "metadata": {},
    "source": [
     "## Feature Engineering and Extraction"
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c108baa8",
+   "id": "8b5c5d90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3cf5c3df",
+   "id": "f33ef368",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "55264050",
+   "id": "04835b14",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c74e21f0",
+   "id": "4256ccef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a5b6f660",
+   "id": "d22105b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d4200f96",
+   "id": "767653fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "0f0ab392",
+   "id": "3c9aca19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a6b6f785",
+   "id": "b6ac9e39",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a8f66dd",
+   "id": "6ef9f853",
    "metadata": {},
    "source": [
     "## Data Split and Train"
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a3fdbaa9",
+   "id": "cdd726a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "69da7c3b",
+   "id": "caf7cc8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0c7945a9",
+   "id": "115fe0a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e90c09d2",
+   "id": "d9d44133",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "b412d0d2",
+   "id": "a4e69ef6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "fe24d29a",
+   "id": "fedb9ff1",
    "metadata": {},
    "outputs": [
     {
@@ -496,9 +496,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5f36c2e2",
+   "metadata": {},
+   "source": [
+    "## Feature Ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "17aa015b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels            0.789723\n",
+      "Median s3         0.033680\n",
+      "Gaussian s3       0.018617\n",
+      "Gabor7            0.018309\n",
+      "Gabor6            0.018191\n",
+      "Gabor8            0.015173\n",
+      "Gaussian s7       0.013329\n",
+      "Gabor23           0.012008\n",
+      "Scharr            0.011151\n",
+      "Gabor5            0.007710\n",
+      "Gabor15           0.006165\n",
+      "Gabor16           0.006075\n",
+      "Sobel             0.006015\n",
+      "Variance s3       0.005780\n",
+      "Prewitt           0.005495\n",
+      "Roberts           0.004960\n",
+      "Gabor29           0.004592\n",
+      "Gabor28           0.003080\n",
+      "Gabor24           0.003061\n",
+      "Original Image    0.002545\n",
+      "Gabor30           0.002270\n",
+      "Gabor32           0.002184\n",
+      "Gabor31           0.001925\n",
+      "Gabor21           0.001767\n",
+      "Gabor22           0.001457\n",
+      "Gabor4            0.001210\n",
+      "Gabor3            0.001001\n",
+      "Gabor27           0.000823\n",
+      "Canny Edge        0.000706\n",
+      "Gabor20           0.000625\n",
+      "Gabor19           0.000374\n",
+      "Gabor1            0.000000\n",
+      "Gabor14           0.000000\n",
+      "Gabor25           0.000000\n",
+      "Gabor13           0.000000\n",
+      "Gabor12           0.000000\n",
+      "Gabor11           0.000000\n",
+      "Gabor10           0.000000\n",
+      "Gabor9            0.000000\n",
+      "Gabor17           0.000000\n",
+      "Gabor26           0.000000\n",
+      "Gabor2            0.000000\n",
+      "Gabor18           0.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "features_list = list(X.columns)\n",
+    "feature_imp = pd.Series(model.feature_importances_, index=features_list).sort_values(ascending=False)\n",
+    "print(feature_imp)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8de8720",
+   "id": "32f7c223",
    "metadata": {},
    "outputs": [],
    "source": []
