Save model and segment image

--- a/traditional-segmentation/rand-forest.ipynb
+++ b/traditional-segmentation/rand-forest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7f3569e6",
+   "execution_count": 99,
+   "id": "d33a01a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d43bef51",
+   "id": "0add9691",
    "metadata": {},
    "source": [
     "## Feature Engineering and Extraction"
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8b5c5d90",
+   "execution_count": 100,
+   "id": "d44b1ffa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f33ef368",
+   "execution_count": 101,
+   "id": "e233ec5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "04835b14",
+   "execution_count": 102,
+   "id": "524c9476",
    "metadata": {},
    "outputs": [
     {
@@ -118,8 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "4256ccef",
+   "execution_count": 103,
+   "id": "eeaf62df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d22105b2",
+   "execution_count": 104,
+   "id": "319a56a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,8 +157,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "767653fb",
+   "execution_count": 105,
+   "id": "1ecfc3bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "3c9aca19",
+   "execution_count": 106,
+   "id": "12cfc012",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "b6ac9e39",
+   "execution_count": 107,
+   "id": "fa95027c",
    "metadata": {},
    "outputs": [
     {
@@ -232,6 +232,8 @@
        "      <th>Gabor8</th>\n",
        "      <th>Gabor9</th>\n",
        "      <th>...</th>\n",
+       "      <th>Gabor32</th>\n",
+       "      <th>Canny Edge</th>\n",
        "      <th>Roberts</th>\n",
        "      <th>Sobel</th>\n",
        "      <th>Scharr</th>\n",
@@ -239,8 +241,6 @@
        "      <th>Gaussian s3</th>\n",
        "      <th>Gaussian s7</th>\n",
        "      <th>Median s3</th>\n",
-       "      <th>Variance s3</th>\n",
-       "      <th>Labels</th>\n",
        "      <th>Label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -258,12 +258,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -282,12 +282,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -306,12 +306,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -330,12 +330,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -354,12 +354,12 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -367,7 +367,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 44 columns</p>\n",
+       "<p>5 rows × 42 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -378,24 +378,24 @@
        "3               0       0       0       0       0       0       0       0   \n",
        "4               0       0       0       0       0       0       0       0   \n",
        "\n",
-       "   Gabor8  Gabor9  ...  Roberts  Sobel  Scharr  Prewitt  Gaussian s3  \\\n",
-       "0       0       0  ...      0.0    0.0     0.0      0.0            0   \n",
-       "1       0       0  ...      0.0    0.0     0.0      0.0            0   \n",
-       "2       0       0  ...      0.0    0.0     0.0      0.0            0   \n",
-       "3       0       0  ...      0.0    0.0     0.0      0.0            0   \n",
-       "4       0       0  ...      0.0    0.0     0.0      0.0            0   \n",
+       "   Gabor8  Gabor9  ...  Gabor32  Canny Edge  Roberts  Sobel  Scharr  Prewitt  \\\n",
+       "0       0       0  ...        0           0      0.0    0.0     0.0      0.0   \n",
+       "1       0       0  ...        0           0      0.0    0.0     0.0      0.0   \n",
+       "2       0       0  ...        0           0      0.0    0.0     0.0      0.0   \n",
+       "3       0       0  ...        0           0      0.0    0.0     0.0      0.0   \n",
+       "4       0       0  ...        0           0      0.0    0.0     0.0      0.0   \n",
        "\n",
-       "   Gaussian s7  Median s3  Variance s3  Labels  Label  \n",
-       "0            0          0            0       0      0  \n",
-       "1            0          0            0       0      0  \n",
-       "2            0          0            0       0      0  \n",
-       "3            0          0            0       0      0  \n",
-       "4            0          0            0       0      0  \n",
+       "   Gaussian s3  Gaussian s7  Median s3  Label  \n",
+       "0            0            0          0      0  \n",
+       "1            0            0          0      0  \n",
+       "2            0            0          0      0  \n",
+       "3            0            0          0      0  \n",
+       "4            0            0          0      0  \n",
        "\n",
-       "[5 rows x 44 columns]"
+       "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef9f853",
+   "id": "6f8b1d0e",
    "metadata": {},
    "source": [
     "## Data Split and Train"
@@ -414,8 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "cdd726a7",
+   "execution_count": 108,
+   "id": "88b8c861",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,8 +425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "caf7cc8b",
+   "execution_count": 109,
+   "id": "56fc5fc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,8 +436,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "115fe0a7",
+   "execution_count": 110,
+   "id": "13d18f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,8 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "d9d44133",
+   "execution_count": 111,
+   "id": "6ac14d02",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "RandomForestClassifier(n_estimators=10, random_state=42)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,8 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "a4e69ef6",
+   "execution_count": 112,
+   "id": "752a2193",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,15 +478,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "fedb9ff1",
+   "execution_count": 113,
+   "id": "56b9592e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy =  0.9997499767135174\n"
+      "Accuracy =  0.9285497178658797\n"
      ]
     }
    ],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f36c2e2",
+   "id": "5ffc1acf",
    "metadata": {},
    "source": [
     "## Feature Ranking"
@@ -505,57 +505,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "17aa015b",
+   "execution_count": 114,
+   "id": "135fa69b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Labels            0.789723\n",
-      "Median s3         0.033680\n",
-      "Gaussian s3       0.018617\n",
-      "Gabor7            0.018309\n",
-      "Gabor6            0.018191\n",
-      "Gabor8            0.015173\n",
-      "Gaussian s7       0.013329\n",
-      "Gabor23           0.012008\n",
-      "Scharr            0.011151\n",
-      "Gabor5            0.007710\n",
-      "Gabor15           0.006165\n",
-      "Gabor16           0.006075\n",
-      "Sobel             0.006015\n",
-      "Variance s3       0.005780\n",
-      "Prewitt           0.005495\n",
-      "Roberts           0.004960\n",
-      "Gabor29           0.004592\n",
-      "Gabor28           0.003080\n",
-      "Gabor24           0.003061\n",
-      "Original Image    0.002545\n",
-      "Gabor30           0.002270\n",
-      "Gabor32           0.002184\n",
-      "Gabor31           0.001925\n",
-      "Gabor21           0.001767\n",
-      "Gabor22           0.001457\n",
-      "Gabor4            0.001210\n",
-      "Gabor3            0.001001\n",
-      "Gabor27           0.000823\n",
-      "Canny Edge        0.000706\n",
-      "Gabor20           0.000625\n",
-      "Gabor19           0.000374\n",
-      "Gabor1            0.000000\n",
+      "Gaussian s7       0.093615\n",
+      "Scharr            0.071959\n",
+      "Prewitt           0.070230\n",
+      "Sobel             0.067229\n",
+      "Roberts           0.066827\n",
+      "Gaussian s3       0.064670\n",
+      "Median s3         0.054432\n",
+      "Original Image    0.046912\n",
+      "Gabor31           0.040916\n",
+      "Gabor32           0.039195\n",
+      "Gabor23           0.035149\n",
+      "Gabor29           0.034994\n",
+      "Gabor30           0.032699\n",
+      "Gabor21           0.031745\n",
+      "Gabor15           0.031224\n",
+      "Gabor6            0.028231\n",
+      "Gabor16           0.024625\n",
+      "Gabor4            0.023481\n",
+      "Gabor3            0.021061\n",
+      "Gabor5            0.018377\n",
+      "Gabor24           0.016198\n",
+      "Gabor20           0.015342\n",
+      "Gabor8            0.014910\n",
+      "Gabor22           0.012561\n",
+      "Gabor7            0.011696\n",
+      "Gabor19           0.010758\n",
+      "Gabor27           0.010193\n",
+      "Gabor28           0.008138\n",
+      "Canny Edge        0.002633\n",
+      "Gabor9            0.000000\n",
+      "Gabor13           0.000000\n",
+      "Gabor2            0.000000\n",
+      "Gabor10           0.000000\n",
+      "Gabor11           0.000000\n",
+      "Gabor12           0.000000\n",
       "Gabor14           0.000000\n",
       "Gabor25           0.000000\n",
-      "Gabor13           0.000000\n",
-      "Gabor12           0.000000\n",
-      "Gabor11           0.000000\n",
-      "Gabor10           0.000000\n",
-      "Gabor9            0.000000\n",
-      "Gabor17           0.000000\n",
-      "Gabor26           0.000000\n",
-      "Gabor2            0.000000\n",
+      "Gabor1            0.000000\n",
       "Gabor18           0.000000\n",
+      "Gabor26           0.000000\n",
+      "Gabor17           0.000000\n",
       "dtype: float64\n"
      ]
     }
@@ -567,9 +565,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ee1c092",
+   "metadata": {},
+   "source": [
+    "## Save and Segment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "8bd4d537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "filename = \"sandstone_model\"\n",
+    "pickle.dump(model, open(filename, \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "27bd7e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model = pickle.load(open(filename, \"rb\"))\n",
+    "result = load_model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "a09b886a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "segmented = result.reshape((img.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "ad12a43f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.image.AxesImage at 0x1af536ef9d0>"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "plt.imshow(segmented, cmap=\"turbo\")\n",
+    "plt.imsave(\"segmented_rock_turbo.jpg\", segmented, cmap=\"turbo\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32f7c223",
+   "id": "800e16f8",
    "metadata": {},
    "outputs": [],
    "source": []
